2011-04-26  Levi Weintraub  <leviw@chromium.org>

Reviewed by Eric Seidel.

        Root element should establish a new block formatting context
        https://bugs.webkit.org/show_bug.cgi?id=54573

        Always expanding the root render object to enclose overhanging floats.

        * fast/backgrounds/size/contain-and-cover-expected.txt:
        * fast/block/float/float-overhangs-root.html: Added.
        * platform/mac/compositing/direct-image-compositing-expected.txt:
        * platform/mac/css2.1/t0905-c414-flt-00-d-expected.txt:
        * platform/mac/css2.1/t0905-c414-flt-01-d-g-expected.txt:
        * platform/mac/css2.1/t0905-c414-flt-02-c-expected.txt:
        * platform/mac/css2.1/t0905-c414-flt-03-c-expected.txt:
        * platform/mac/css2.1/t0905-c414-flt-04-c-expected.txt:
        * platform/mac/css2.1/t0905-c414-flt-wrap-01-d-g-expected.txt:
        * platform/mac/css2.1/t0905-c5525-fltcont-00-d-g-expected.txt:
        * platform/mac/css2.1/t0905-c5525-fltwidth-02-c-g-expected.txt:
        * platform/mac/css2.1/t0905-c5525-fltwidth-03-c-g-expected.txt:
        * platform/mac/css2.1/t090501-c414-flt-02-d-g-expected.txt:
        * platform/mac/css2.1/t090501-c414-flt-03-b-g-expected.txt:
        * platform/mac/fast/backgrounds/background-position-parsing-expected.txt:
        * platform/mac/fast/backgrounds/repeat/mask-negative-offset-repeat-expected.txt:
        * platform/mac/fast/backgrounds/repeat/negative-offset-repeat-expected.txt:
        * platform/mac/fast/block/float/008-expected.txt:
        * platform/mac/fast/block/float/029-expected.txt:
        * platform/mac/fast/block/float/031-expected.txt:
        * platform/mac/fast/block/float/033-expected.txt:
        * platform/mac/fast/block/float/035-expected.txt:
        * platform/mac/fast/block/float/clamped-right-float-expected.txt:
        * platform/mac/fast/block/float/float-forced-below-other-floats-expected.txt:
        * platform/mac/fast/block/float/float-overhangs-root-expected.checksum: Added.
        * platform/mac/fast/block/float/float-overhangs-root-expected.png: Added.
        * platform/mac/fast/block/float/float-overhangs-root-expected.txt: Added.
        * platform/mac/fast/block/float/nested-clearance-expected.txt:
        * platform/mac/fast/block/margin-collapse/062-expected.txt:
        * platform/mac/fast/block/margin-collapse/063-expected.txt:
        * platform/mac/fast/blockflow/block-level-images-expected.txt:
        * platform/mac/fast/blockflow/floats-in-block-layout-expected.txt:
        * platform/mac/fast/borders/bidi-012-expected.txt:
        * platform/mac/fast/box-shadow/basic-shadows-expected.txt:
        * platform/mac/fast/css/color-correction-on-background-image-expected.txt:
        * platform/mac/fast/css/h1-in-section-elements-expected.txt:
        * platform/mac/fast/forms/basic-textareas-quirks-expected.txt:
        * platform/mac/fast/inline/inline-box-background-expected.txt:
        * platform/mac/fast/inline/inline-box-background-long-image-expected.txt:
        * platform/mac/fast/inline/inline-box-background-repeat-x-expected.txt:
        * platform/mac/fast/inline/inline-box-background-repeat-y-expected.txt:
        * platform/mac/fast/lists/003-expected.txt:
        * platform/mac/fast/lists/003-vertical-expected.txt:
        * platform/mac/fast/media/mq-relative-constraints-08-expected.txt:
        * platform/mac/fast/repaint/box-shadow-h-expected.txt:
        * platform/mac/fast/repaint/box-shadow-v-expected.txt:
        * platform/mac/fast/repaint/subtree-root-clip-expected.txt:
        * platform/mac/fast/text/emphasis-expected.txt:
        * platform/mac/fast/text/emphasis-vertical-expected.txt:
        * platform/mac/fast/text/whitespace/012-expected.txt:
        * platform/mac/tables/mozilla/bugs/bug120364-expected.txt:
        * platform/mac/tables/mozilla/bugs/bug45055-2-expected.txt:
        * platform/mac/tables/mozilla/bugs/bug72359-expected.txt:
        * platform/mac/tables/mozilla/marvin/x_table_align_left-expected.txt:
        * platform/mac/tables/mozilla/marvin/x_table_align_right-expected.txt:
2011-04-26  Levi Weintraub  <leviw@chromium.org>

        Reviewed by Eric Seidel.

        Root element should establish a new block formatting context
        https://bugs.webkit.org/show_bug.cgi?id=54573

        Always expanding the root renderer to include overhanging floats.

        Test: fast/block/float/float-overhangs-root.html

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::expandsToEncloseOverhangingFloats):

Canonical link: https://commits.webkit.org/74730@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85011 268f45cc-cd09-0410-ab3c-d52691b4dbfc